--- a/secret-noindex.html
+++ b/secret-noindex.html
@@ -1,14 +1,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, noarchive, nofollow">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Secret Document noindex</title>
 </head>
 <body>
-Hello
-<a href="/secret.html">go to secret document</a>
-<a href="/secret-noindex.html">go to secret noindex document</a>
+Hello Secret - noindex
 </body>
 </html>
